# lrytas

./: .markdownlint.jsonc  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  makefile  mkdocs.yaml  pyproject.toml
docs/: index.md
src/lrytas/: __init__.py  dataset_builder.py  scraper.py
src/scripts/: build_dataset.py  main.py  scrape.py
tests/: __init__.py
