[project]
name = "lrytas"
version = "0.0.0"
description = "Build summarisation dataset based on lrytas.lt"
readme = "README.md"
authors = [
    {name = "Oliver Kinch", email = "oliver.kinch@alexandra.dk"},
]
maintainers = [
    {name = "Oliver Kinch", email = "oliver.kinch@alexandra.dk"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "beautifulsoup4>=4.14.0",
    "datasets>=4.2.0",
    "hydra-core>=1.3.2",
    "jsonlines>=4.0.0",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "tldextract>=5.3.0",
    "wordfreq>=3.1.1",
]

[project.urls]
Repository = "https://github.com/alexandrainst/lrytas"
Issues = "https://github.com/alexandrainst/lrytas/issues"

[project.license]
file = "LICENSE"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.3.0",
    "readme-coverage-badger>=1.0.1",
    "click>=8.2.1",
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "nbstripout>=0.8.1",
    "coverage>=7.10.5",
    "mkdocs-material>=9.6.18",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=4.4.5",
    "pip>=25.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
    # Docstrings for **kwargs
    "D417",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/lrytas',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/lrytas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
